<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_name">CV</string>
    <!--Navigation menu        -->
    <string name="home" >Készségek</string>
    <string name="schools" >Iskolák</string>
    <string name="experience" >Szakmai tapasztalatok</string>
    <string name="hobbys" >Hobbik</string>
    <string name="languages" >Nyelvek</string>

    <!--Language setup page    -->
    <string name="hungarian" >Magyar</string>
    <string name="english" >English</string>
    <string name="german" >Német</string>
    <string name="choose" >Válasszon nyelvet</string>
    
    <!--Skills page     -->
    <string name="hungariantoskill" >Magyar</string>
    <string name="englishtoskill" >Angol</string>
    <string name="skills">Ismeretek</string>
    <string name="operatingsystem">Operációs rendszerek</string>
    <string name="other">Egyebek</string>
    <string name="hungarianlevel">anyanyelv</string>
    <string name="englishlevel">középfok</string>
    <string name="germanlevel">alapfok</string>
    <string name="aboutme">Magamról</string>
    <string name="aboutmecontent">kitartó, szorgalmas, rugalmas</string>
    <string name="target">Cél</string>

    <!-- Hobby page -->
    <string name="hobbysname">fallabda, kerékpáros túrázás, túrázás</string>

</resources>